- Added MongoDB package; - Created a common interface for both PostgreSQL and MongoDB; - Implemented PostgresSQL and MongoDB; - Configure dependency injection for the repositories; - Modified the program file to register the repositories; - Modified the controller to use the repository;

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseSettings": {
+    "DbProvider": "PostgreSql" // or "MongoDb"
+  },
+  "ConnectionStrings": {
+    "PostgresConnection": "Host=localhost;Database=CallCenterDB;Username=postgres;Password=password",
+    "MongoDbConnection": "mongodb://localhost:27017",
+    "MongoDbName": "CallCenterDB"
+  }
 }
